# orpheus_deck

./: .gitignore  N3E_INTEGRATION_PLAN.md  N3_ARCHITECTURE.md  ORPHEUS_DESIGN_MANIFESTO.md  ORPHEUS_NATIVE_AUDIO_PLAN.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  audio_types.h  click_backing.cpp  click_backing.h  duplex_engine.cpp  duplex_engine.h  mixer_engine.cpp  mixer_engine.h  native_engine.cpp  native_engine.h  oboe_engine.cpp  oboe_engine.h  overdub_engine.cpp  overdub_engine.h  playback_engine.cpp  playback_engine.h  ring_buffer.cpp  ring_buffer.h  timing_analysis.cpp  timing_analysis.h  wav_reader.cpp  wav_reader.h  wav_test_tone.cpp  wav_test_tone.h  wav_writer.cpp  wav_writer.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  orpheus_latency_calibration.dart
lib/native/: orpheus_native_audio.dart  orpheus_native_bindings.dart  orpheus_native_duplex_bindings.dart  orpheus_native_labels.dart  orpheus_native_latency_profile.dart  orpheus_native_n3_bindings.dart  orpheus_native_n3c_bindings.dart  orpheus_native_n3d_bindings.dart  orpheus_native_test_screen.dart
lib/recorder/: legacy_flutter_recorder_engine.dart  native_oboe_recorder_engine.dart  native_test_wav_generator.dart  orpheus_recorder_engine.dart  recorder_engine_selector.dart  recorder_engine_types.dart
lib/widgets/: tape_reel_transport.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+10 files in other folders)
